[package]
name = "vmdrs-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vmdrs_py"
crate-type = ["cdylib"]

[dependencies]
# blas-src = { version = "0.9.0", features = ["accelerate"] }

# blas-src = { version = "0.9.0", features = ["openblas"] }
# openblas-src = { version = "0.10.8", features = ["static"] }

blas-src = { version = "0.9.0", features = ["intel-mkl"] }
# cblas-sys = "0.1.4"
# intel-mkl-src = { version = "0.8.1", features = ["mkl-static-ilp64-iomp"] }
# blas-sys = "0.7.1"
numpy = "0.19.0"
pyo3 = "0.19.0"
vmd-rs = { version = "0.1.0", features = ["blas"] }
